# calcu-rs

./: Cargo.toml
benches/: my_benchmarks.rs
src/: config.rs  lib.rs  main.rs  parse.rs  structs.rs  tables.rs
tests/: 2024-01-02.md  2024-01-04.md  2024-01-19.md  2024-01-20.md  2024-04-19.md  2024-04-20.md  2024-06-01.md  2024-06-04.md  2024-06-16.md  2024-06-19.md  2024-06-20.md  2024-08-15.md  2024-08-19.md  2024-08-20.md  2024-09-19.md  2024-09-20.md  2024-09-30.md  2024_06_19.md  2024_06_20.md
