[package]
name = "calcu-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive"] }
derive_builder = { version = "0.20.0", features = ["clippy"] }
pulldown-cmark = "0.11.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
tabled = "0.15.0"
toml = "0.8.14"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmarks"
harness = false

[lib]
bench = false

[[bin]]
name = "crs"
path = "src/main.rs"
bench = false
